tests/Project2/student_test/test_2_s06.out
Error type 14 at Line 9: no such member: name