tests/Project2/student_test/test_2_s06.spl
struct tree
{
  int height;
};
int test_01()
{
  struct tree t;
  char c;
  t.name = c;
  return 0;
}